--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,50 @@
+/* --------------------------- Nav Styles ----------------------------------*/
+.nav-container {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  margin-bottom: 2%;
+  box-sizing: 0;
+  box-shadow: rgb(0 0 0 / 10%) 0px 2px 1px;
+}
+
+.navbar {
+  width: 100%;
+  height: 2.5em;
+  display: flex;
+  justify-content: flex-start;
+  padding: 1em;
+}
+
+.burger-menu {
+  height: 100%;
+  width: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.burger-menu-icon {
+  height: 100%;
+  width: 100%;
+}
+
+.nav-logo {
+  display: block;
+  position: relative;
+  margin: auto;
+  top: -0.75em;
+}
+
+.nav-logo-image {
+  height: 4em;
+}
+
+
+/* --------------------------- TrainerHome Styles ----------------------------------*/
+
 .trainer-home-container {
   text-align: center;
 }
