--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* --------------------------- Nav Styles ----------------------------------*/
 .nav-container {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   margin-bottom: 2%;
   box-sizing: 0;
@@ -98,12 +98,31 @@
 .hidden {
   display: none;
 }
-/* --------------------------- TrainerHome Styles ----------------------------------*/
 
-.trainer-home-container {
-  text-align: center;
+
+/* --------------------------- Reusable Styles ----------------------------------*/
+
+.sections {
+  background: rgb(245, 245, 245);
+  border: 1px solid rgb(236, 239, 241);
+  border-radius: 4px;
+  box-shadow: rgb(0 0 0 / 10%) 0px 2px 1px;
 }
 
-.trainer-home-header {
-  color: red;
+.headers {
+  text-align: center;
+  width: 60%;
+  margin: 2% auto;
+  background-color: rgb(0 0 0);
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  line-height: 18px;
+  border: 0px;
+  border-radius: 4px;
+  box-shadow: rgb(0 0 0 / 10%) 0px 3px 1px;
+  padding: 0.5rem;
 }
