Login styles ammended

--- a/src/App.css
+++ b/src/App.css
@@ -74,9 +74,9 @@
   box-shadow: rgb(0 0 0 / 10%) 2px 2px 2px;
 }
 
-.nav-submenu {
+/* .nav-submenu {
 
-}
+} */
 
 .nav-submenu-link {
   font-size: 1.2rem;
