--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* --------------------------- TrainerHome Styles ----------------------------------*/
 
 .trainer-home {
@@ -22,7 +23,7 @@
     height: 100%;
     overflow: scroll;
     color: rgb(0, 0, 0);
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 23px;
     letter-spacing: 0px;
@@ -53,7 +54,7 @@
     display: flex;
     overflow: hidden;
     color: rgb(0, 0, 0);
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     letter-spacing: 0px;
     line-height: 21px;
@@ -70,9 +71,9 @@
     margin: 5%;
 }
 
-.activeToday-text-data {
+/* .activeToday-text-data {
 
-}
+} */
 
 .activeToday-imgContainer {
     width: 50%;
