--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -5,11 +5,261 @@
     overflow: hidden;
 }
 
-/* .container {
+.container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 0.5fr 0.7fr 0.3fr 0.3fr 0.8fr;
+    width: 95%;
+    margin: auto;
+    overflow: hidden;
+    height: 100%;
+}
+
+/* .edit-icon {
 
 } */
 
+/* --------------------------- FitBitIcons Styles ----------------------------------*/
 
+.fitbit-icons {
+    height: 100%;
+    grid-column: span 5;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
 
+.icon {
+    height: 4em;
+    width: 100%;
+}
 
+.calBurnt {
+    color: rgb(196, 97, 3);
+}
 
+.waterIntake {
+    color: rgb(2, 148, 186);
+}
+
+.floorsClimbed {
+    color: rgb(141, 113, 1);
+}
+
+.activeMins {
+    color: rgb(174, 234, 95);
+}
+
+.distTravelled {
+    color: rgb(201, 99, 248);
+}
+
+/* --------------------------- Steps Styles ----------------------------------*/
+
+.steps {
+    height: 100%;
+    overflow: hidden;
+}
+
+.steps-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    width: 80%;
+    height: 80%;
+    margin: auto;
+}
+
+.steps-chart-container {
+    height: 100%;
+    width: 100%;
+}
+
+.steps-bar-chart {
+    height: 100%;
+    width: 100%;
+}
+
+.steps-text {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* .steps-label {
+
+}
+
+.steps-data {
+
+} */
+
+/* --------------------------- Intake Styles ----------------------------------*/
+
+.intake {
+    grid-row: span 2;
+    grid-column: span 2;
+    height: 100%;
+    overflow: hidden;
+}
+
+.intake-heading {
+    text-align: center;
+    font-size: 2em;
+    border-bottom: 1px solid black;
+}
+
+.intake-table {
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: 1.25fr 1.25fr 0.5fr;
+    margin-left: 2%;
+}
+
+/* .intake-table-edit-icon {
+
+} */
+
+/* --------------------------- ProgressChart Styles ----------------------------------*/
+
+.progress-chart {
+    grid-row: span 3;
+    grid-column: span 2;
+}
+
+/* --------------------------- Goals Styles ----------------------------------*/
+
+.goals {
+    grid-row: span 2;
+    height: 100%;
+    overflow: hidden;
+}
+
+.goals-entry {
+    text-align: center;
+    margin: 5%;
+    font-size: 20px;
+}
+
+/* --------------------------- CalSummary Styles ----------------------------------*/
+
+.calorie-summary {
+    grid-column: span 2;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    height: 100%;
+}
+
+.check {
+    color: green;
+}
+
+.xmark {
+    color: red;
+}
+
+.dash {
+    color: grey;
+}
+
+/* --------------------------- Notes Styles ----------------------------------*/
+
+/* .catchup-notes {
+
+} */
+
+.catchup-notes-textbox {
+    width: 100%;
+    height: 75%;
+}
+
+/* --------------------------- Schedule Styles ----------------------------------*/
+
+.schedule {
+    grid-column: span 3;
+    height: 100%;
+    overflow: hidden;
+}
+
+/* .carousel {
+
+}
+
+.button-left {
+
+}
+
+.button-right {
+
+}
+
+.track-container {
+
+}
+
+.track {
+
+}
+
+.slide {
+
+}
+
+.slide-content {
+
+}
+
+.popup {
+
+}
+
+.hidden {
+
+}
+
+.carousel-nav {
+
+}
+
+.carousel-nav-indicator {
+
+} */
+
+/* --------------------------- PersonalBests Styles ----------------------------------*/
+
+.personal-bests {
+    height: 100%;
+    overflow: hidden;
+}
+
+/* .personal-bests-content {
+
+} */
+
+.personal-bests-entry {
+    margin: 7.5%;
+}
+
+.personal-bests-entry-data {
+    display: flex;
+    margin: 5%;
+    justify-content: space-evenly;
+}
+
+/* .personal-bests-exercise {
+
+} */
+
+.personal-bests-previous {
+    font-weight: 700;
+}
+
+.personal-bests-icon {
+    color: green;
+}
+
+.personal-bests-new {
+    font-weight: 700;
+}
