--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -5,7 +5,7 @@
     overflow: hidden;
 }
 
-.container {
+.catchUp-container {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(5, 1fr);
@@ -31,7 +31,7 @@
     text-align: center;
 }
 
-.icon {
+.fitbit-icon {
     height: 4em;
     width: 100%;
 }
