--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -13,13 +13,14 @@
   margin: auto;
   overflow: hidden;
   height: 100%;
-  grid-template-rows: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: 1fr 1.75fr;
 }
 
 /* --------------------------- Clients Styles ----------------------------------*/
 
 .clients {
-    grid-row: span 3;
+    grid-row: span 2;
     height: 100%;
     overflow: scroll;
     color: rgb(0, 0, 0);
@@ -85,28 +86,12 @@
     height: 100%;
 }
 
-/* --------------------------- Activity Styles ----------------------------------*/
 
-.activity {
-    grid-row: span 2;
-    height: 100%;
-    overflow: hidden;
-    text-align: center;
-}
+/* --------------------------- Upcoming Meetings Styles ----------------------------------*/
 
-/* --------------------------- Intake Styles ----------------------------------*/
-
-.intake {
-    grid-column: 2;
+.upcoming-meetings {
+    /* grid-column: 2; */
     height: 100%;
     overflow: scroll;
     overflow-x: hidden;
-}
-
-/* --------------------------- UpcomingWorkouts Styles ----------------------------------*/
-.upcomingWorkouts {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    height: 100%;
-    overflow: hidden;
 }
