--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -77,8 +77,9 @@
 }
 
 .clients-menu {
+    /* position: absolute; */
     display: flex;
-    justify-content: flex-end;
+    justify-content: end;
     gap: 2rem;
 }
 
@@ -103,12 +104,15 @@
 
 .activeToday-text {
     width: 50%;
-    margin: 20% auto;
+    /* margin: 20% auto; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.activeToday-text-label {
+/* .activeToday-text-label {
     margin: 5%;
-}
+} */
 
 /* .activeToday-text-data {
 
@@ -165,6 +169,42 @@
     display: none;
 }
 
+/* .popup-nav {
+    display: flex;
+    justify-content: center;
+} */
+
+/* .popup-headers {
+    text-align: center;
+    width: 60%;
+    margin: 2% auto;
+    background-color: rgb(0 0 0);
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+    line-height: 18px;
+    border: 0px;
+    border-radius: 4px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 3px 1px;
+    padding: 0.5rem;
+} */
+
+.schedule-meeting-popup-close-button {
+    margin: auto;
+    /* font-weight: 500;
+    font-size: 14px; */
+    /* line-height: 18px; */
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .schedule-meeting-popup {
     position: absolute;
     margin: 7.5%;
@@ -173,10 +213,24 @@
     bottom: 0;
     left: 0;
     z-index: 1;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    align-items: center;
+}
+
+.schedule-meeting-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    height: 50%;
+}
+
+.schedule-meeting-form-item {
+    width: 40%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .schedule-meeting-popup-close-button {
