--- a/src/css/TrainerProfile.css
+++ b/src/css/TrainerProfile.css
@@ -15,9 +15,19 @@
     grid-template-columns: repeat(2, 1fr);
 }
 
+.profile-icons {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .profile-edit-icon {
     cursor: pointer;
     max-width: fit-content;
+}
+
+.profile-logout-icon {
+    text-decoration: none;
+    color: black;
 }
 
 
@@ -55,6 +65,24 @@
     height: 40%;
 }
 
+.saved-workouts-content {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.saved-workouts-content-row {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+
+.workout-name {
+    font-weight: 600;
+}
+
 /* --------------------------- popup styles ------------------------------------------- */
 .hidden {
     display: none;
@@ -68,11 +96,30 @@
     bottom: 0;
     left: 0;
     z-index: 1;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
     align-items: center;
 }
+
+.saved-workouts-popup-table {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center; */
+    /* height: 50%; */
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+th, td {
+    border-bottom: 1px solid #ddd;
+}
+
+/* tr:nth-child(even) {
+    background-color: ;
+} */
 
 .saved-workouts-popup-close-button {
     cursor: pointer;
