--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -128,13 +128,15 @@
     text-align: center;
     font-size: 2em;
     border-bottom: 1px solid black;
+    margin-bottom: 2%;
 }
 
 .intake-table {
     display: grid;
     gap: 1.5rem;
-    grid-template-columns: 1.25fr 1.25fr 0.5fr;
-    margin-left: 2%;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    margin: auto;
 }
 
 /* .intake-table-edit-icon {
