--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -93,13 +93,15 @@
 }
 
 .steps-chart-container {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
 }
 
 .steps-bar-chart {
-    height: 100%;
+    max-width: 100%;
+    /* height: 100%; */
     width: 100%;
+    /* object-fit: cover;   crops images instead of stretch or shrinking */
 }
 
 .steps-text {
