--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -1,19 +1,19 @@
 /* --------------------------- CatchUp Styles ----------------------------------*/
 
-/* .catchUp {
-    height: 95vh;
-    overflow: hidden;
-} */
+.catchUp {
+    height: 100%;
+    /* overflow: hidden; */
+}
 
 .catchUp-container {
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 0.5fr 0.7fr 0.3fr 0.3fr 0.8fr;
+    grid-template-columns: 0.8fr 0.2fr 1fr 0.8fr 0.2fr 0.8fr 0.2fr 1fr;
+    /* grid-template-rows: 1fr 0.2fr 0.8fr 0.8fr 0.2fr 1fr; */
     width: 95%;
     margin: auto;
     overflow: hidden;
-    height: 100%;
+    /* height: 50%; */
 }
 
 /* .edit-icon {
@@ -32,7 +32,7 @@
 
 .fitbit-icons {
     height: 100%;
-    grid-column: span 5;
+    grid-column: span 8;
     overflow: hidden;
     display: flex;
     justify-content: space-evenly;
@@ -77,6 +77,7 @@
 /* --------------------------- Steps Styles ----------------------------------*/
 
 .steps {
+    grid-column: span 2;
     grid-row: span 2;
     height: 100%;
     overflow: hidden;
@@ -147,7 +148,7 @@
 
 /* --------------------------- Feeback Summary Styles ----------------------------------*/
 .feedback-summary {
-    grid-column: span 2;
+    grid-column: span 4;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     height: 100%;
@@ -158,7 +159,7 @@
 
 .progress-chart {
     grid-row: span 3;
-    grid-column: span 2;
+    grid-column: span 4;
 }
 
 .progress-chart-image {
@@ -204,6 +205,7 @@
 
 .catchup-notes {
     grid-row: span 2;
+    grid-column: span 2;
 }
 
 .catchup-notes-textbox {
@@ -214,7 +216,7 @@
 /* --------------------------- Schedule Styles ----------------------------------*/
 
 .schedule {
-    grid-column: span 3;
+    grid-column: span 5;
     height: 100%;
     overflow: hidden;
 }
@@ -322,6 +324,7 @@
 /* --------------------------- PersonalBests Styles ----------------------------------*/
 
 .personal-bests {
+    grid-column: span 2;
     height: 100%;
     overflow: hidden;
 }
