--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+html, body {
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  height: 100%;
+}
+
 /* --------------------------- Nav Styles ----------------------------------*/
 .nav-container {
   width: 100%;
