--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -221,6 +221,11 @@
     overflow: hidden;
 }
 
+.schedule-header {
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
 .carousel {
     position: relative;
     height: 50%;
@@ -250,9 +255,10 @@
 
 .track-container {
     /* background: lightgreen; */
-    height: 80%;
+    height: 100%;
     position: relative;
     overflow: hidden;
+    /* overflow-y: visible; */
 }
 
 .track {
@@ -269,7 +275,7 @@
     justify-content: space-evenly;
     text-align: center;
     position: absolute;
-    top: 0;
+    top: 0.5%;
     bottom: 0;
     width: 100%;
 }
