--- a/src/css/TrainerManageClients.css
+++ b/src/css/TrainerManageClients.css
@@ -12,7 +12,7 @@
     width: 95%;
     margin: auto;
     overflow: hidden;
-    /* height: 100%; */
+    height: 80%;
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -30,11 +30,23 @@
     border-bottom: 1px solid black;
 }
 
+.clients-dropdown {
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.weeks-dropdown {
+    cursor: pointer;
+    font-size: 1.1em;
+    margin: 1% auto;
+}
+
 .assign-workouts-content {
     display: grid;
     gap: 1rem;
     font-size: 2em;
-    height: 65%;
+    height: 80%;
     grid-template-columns: repeat(2, 1fr);
     width: 75%;
     margin: 2.5% auto;
@@ -44,9 +56,40 @@
     text-transform: none;
 }
 
-/* .assign-workouts-day {
+.assign-workouts-day {
+    /* text-align: center; */
+    flex-direction: column;
+}
 
-} */
+.assign-workout-content {
+    display: flex;
+    justify-content: center;
+}
+
+.assign-workout-button {
+    flex-direction: column;
+    width: 60%;
+    margin: auto;
+}
+
+.assign-button {
+    cursor: pointer;
+}
+
+.assign-workout-name {
+    font-size: 0.75em;
+    gap: 1rem;
+}
+
+.assign-workout-name-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.assign-workout-name-content-edit-icon {
+    cursor: pointer;
+}
 
 /* --------------------------- Intake Styles ----------------------------------*/
 
@@ -99,3 +142,54 @@
     height: 75%;
 }
 
+/* --------------------------- popup styles ------------------------------------------- */
+.hidden {
+    display: none;
+}
+
+.assign-workout-popup {
+    position: absolute;
+    margin: 7.5%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    align-items: center;
+}
+
+.assign-workout-popup-table {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center; */
+    /* height: 50%; */
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+th, td {
+    border-bottom: 1px solid #ddd;
+}
+
+/* tr:nth-child(even) {
+    background-color: ;
+} */
+
+.assign-workout-popup-close-button {
+    cursor: pointer;
+    margin: auto;
+    /* font-weight: 500;
+    font-size: 14px; */
+    /* line-height: 18px; */
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
