--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -208,9 +208,15 @@
     grid-column: span 2;
 }
 
+.catchup-notes-textbox-container {
+    width: 80%;
+    /* height: 80%; */
+    margin: 2% auto;
+}
+
 .catchup-notes-textbox {
     width: 100%;
-    height: 75%;
+    /* height: 150px; */
 }
 
 /* --------------------------- Schedule Styles ----------------------------------*/
