--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -129,17 +129,19 @@
 
 .intake-heading {
     text-align: center;
-    font-size: 2em;
+    font-size: 4em;
+    font-weight: 600;
     border-bottom: 1px solid black;
     margin-bottom: 2%;
 }
 
 .intake-table {
     display: grid;
-    gap: 1.5rem;
+    gap: 2.5rem;
     grid-template-columns: 1fr 1fr;
     width: 80%;
     margin: auto;
+    font-size: 2em;
 }
 
 /* .intake-table-edit-icon {
@@ -186,7 +188,20 @@
     grid-column: span 2;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    height: 100%;
+    height: 80%;
+    font-size: 3em;
+    /* padding: 5%; */
+}
+
+.calorie-summary-day {
+    padding: 20% 20% 0 20%;
+    height: fit-content;
+    text-align: center;
+}
+
+.calorie-summary-icon {
+    padding: 0 20% 20% 20%;
+    text-align: center;
 }
 
 .check {
