--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -243,7 +243,7 @@
 
 .catchup-notes-textbox {
     width: 100%;
-    /* height: 150px; */
+    height: 150px;
 }
 
 /* --------------------------- Schedule Styles ----------------------------------*/
