Updated GetAllClients Endpoint

--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -20,7 +20,7 @@
 
     .trainer-home-container {
         grid-template-columns: 1fr 1.5fr;
-        /* grid-template-rows: 1fr 1.75fr; */
+        grid-template-rows: 1fr 1.75fr;
     }
 
     .clients {
