Fixed new dashboard styles on catchup screen

--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -30,7 +30,7 @@
 
 /* --------------------------- Clients Styles ----------------------------------*/
 
-.clients {
+.clients-dropdown {
     grid-column: span 2;
 }
 
