Schedule section fixed for prev and next weeks

--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -367,6 +367,10 @@
     background: rgba(0, 0, 0, 0.75);
 }
 
+.see-notes {
+    cursor: pointer;
+}
+
 /* --------------------------- PersonalBests Styles ----------------------------------*/
 
 .personal-bests {
