imported new fonts

--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
+
 /* --------------------------- TrainerHome Styles ----------------------------------*/
 
 .trainer-home-container {
