--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
+
+
 html, body {
   margin: 0;
   height: 100%;
