--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -1,4 +1,6 @@
 /* --------------------------- CatchUp Styles ----------------------------------*/
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
 
 .catchUp {
     height: 100%;
