--- a/src/css/TrainerLogin.css
+++ b/src/css/TrainerLogin.css
@@ -1,5 +1,8 @@
 /* --------------------------- login Styles ----------------------------------*/
 
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
+
 .login {
     min-height: 100vh;
     background-color: whitesmoke;
