--- a/src/css/TrainerManageClients.css
+++ b/src/css/TrainerManageClients.css
@@ -1,5 +1,7 @@
 /* --------------------------- ManageClients Styles ----------------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
 
 .manage-clients {
     height: 100%;
