--- a/src/css/TrainerRegister.css
+++ b/src/css/TrainerRegister.css
@@ -1,5 +1,9 @@
 /* --------------------------- Trainer Register styles ------------------------------------------- */
 
+/* --------------------------- Fonts ----------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik:wght@400;700&family=Russo+One&display=swap');
+
+
 .trainer-register {
     min-height: 100vh;
     background-color: whitesmoke;
