--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -53,6 +53,7 @@
     gap: 3rem;
     width: 80%;
     margin: 10% auto;
+    font-size: 23px;
 }
 
 .clients-content-entry {
@@ -91,6 +92,109 @@
 
 .clients-add-icon, .clients-edit-icon {
     cursor: pointer;
+}
+
+/* --------------------------- Calendar Styles ----------------------------------*/
+
+.calendar-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    /* min-height: 100vh; */
+    /* background: #9B59B6; */
+}
+.wrapper {
+    /* width: 450px; */
+    background: #fff;
+    border-radius: 10px;
+}
+.wrapper header {
+    display: flex;
+    align-items: center;
+    padding: 25px 30px 10px;
+    justify-content: space-between;
+}
+header .current-date {
+    font-size: 1.45rem;
+    font-weight: 500;
+}
+header .icons span {
+    height: 38px;
+    width: 38px;
+    color: #878787;
+    font-size: 1.9rem;
+    margin: 0 1px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 38px;
+    border-radius: 50%;
+}
+header .icons span:hover {
+    background: #f2f2f2;
+}
+/* .calendar {
+    padding: 20%;
+} */
+.calendar ul {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.calendar .days {
+    margin-bottom: 20px;
+}
+.calendar .weeks li {
+    font-weight: 500;
+}
+.calendar ul li {
+    position: relative;
+    width: calc(100%/7);
+}
+.calendar .days li {
+    z-index: 1;
+    cursor: pointer;
+    margin-top: 15px;
+}
+.days li.inactive {
+    color: #aaa;
+}
+.days li.active {
+    color: #fff;
+}
+.calendar .days li::before{
+    position: absolute;
+    content: "";
+    height: 40px;
+    width: 40px;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+.days li:hover::before{
+    background: #f2f2f2;
+}
+.days li.active::before{
+    background: #000;
+}
+
+.dot {
+    position: absolute;
+    z-index: 5;
+    width: 10px;
+    height: 10px;
+    top: 50%;
+    left: 50%;
+    /* border-radius: 50%; */
+    color: skyblue;
+    transform: translate(-50%, -50%);
+}
+
+/* --------------------------- Events Styles ----------------------------------*/
+.events-info {
+    background: #fff;
 }
 
 /* --------------------------- ActiveToday Styles ----------------------------------*/
@@ -168,6 +272,7 @@
 .upcoming-meeting-entry {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    
 }
 
 /* ------------------ Popup Styles ---------------------------- */
