--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,24 @@ html, body {
   height: 100%;
 }
 
+/* --------------------------- fonts ----------------------------------*/
+.poppins {
+  font-family: 'Poppins', sans-serif;
+}
+
+.rubik {
+  font-family: 'Rubik', sans-serif;
+}
+
+.russo-one {
+  font-family: 'Russo One', sans-serif;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+
 /* --------------------------- Nav Styles ----------------------------------*/
 .nav-container {
   width: 100%;
@@ -134,7 +152,14 @@ html, body {
   background: rgb(245, 245, 245);
   border: 1px solid rgb(236, 239, 241);
   border-radius: 4px;
-  box-shadow: rgb(0 0 0 / 10%) 0px 2px 1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 1px;
+}
+
+.catchup-sections {
+  background: rgb(255, 255, 255);
+  border: 2px solid rgb(0 0 0);
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 1px;
 }
 
 .headers {
@@ -143,12 +168,12 @@ html, body {
   margin: 2% auto;
   background-color: rgb(0 0 0);
   color: rgb(255, 255, 255);
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 14px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
   letter-spacing: 1.3px;
   text-transform: uppercase;
-  line-height: 18px;
+  line-height: 21px;
   border: 0px;
   border-radius: 4px;
   box-shadow: rgb(0 0 0 / 10%) 0px 3px 1px;
