--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -345,12 +345,13 @@ header .icons span:hover {
     justify-content: space-evenly;
     align-items: center;
     height: 50%;
+    font-family: 'Poppins', sans-serif;
 }
 
 .schedule-meeting-form-item {
     width: 40%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 1%;
 }
 
@@ -360,4 +361,11 @@ header .icons span:hover {
 
 .schedule-meeting-submit-button {
     font-size: 1.1em;
+}
+
+.schedule-meeting-form input, .schedule-meeting-form select {
+    width: 250px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: center;
 }
