--- a/src/css/TrainerManageClients.css
+++ b/src/css/TrainerManageClients.css
@@ -37,6 +37,8 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     font-size: 70px;
+    text-align: center;
+    margin: auto;
 }
 .clients-dropdown option {
     font-size: 30px;
