--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -105,6 +105,7 @@
 }
 .wrapper {
     /* width: 450px; */
+    margin: 2% 0%;
     background: #fff;
     border-radius: 10px;
 }
@@ -123,7 +124,7 @@ header .icons span {
     width: 38px;
     color: #878787;
     font-size: 1.9rem;
-    margin: 0 1px;
+    margin: 0 5px;
     cursor: pointer;
     text-align: center;
     line-height: 38px;
@@ -132,6 +133,7 @@ header .icons span {
 header .icons span:hover {
     background: #f2f2f2;
 }
+
 /* .calendar {
     padding: 20%;
 } */
@@ -199,7 +201,7 @@ header .icons span:hover {
 
 /* --------------------------- Events Styles ----------------------------------*/
 .events-info {
-    background: #fff;
+    /* background: #fff; */
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
 }
